--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
 
 header
 {
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../Website/img/pic.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/pic.jpg);
     height:100vh;
     background-size:cover;
     background-position: center;
+    background-color:#B5CAF5;
 }
 
 ul{
