--- a/styleabout.css
+++ b/styleabout.css
@@ -14,7 +14,7 @@
 
 header
 {
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../Website/img/pic.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/pic.jpg);
     height:100vh;
     background-size:cover;
     background-position: center;
