--- a/styledonate.css
+++ b/styledonate.css
@@ -61,7 +61,17 @@ ul li.active a{
     top: 55%;
     left: 50%;
     transform: translate(-50%,-50%);
-    font-size: 15px solid bold;
+    font-size: 12px solid bold;
     border: 5px solid #444;}
 
+a:link {
+  color: white ;
+  background-color: transparent;
+  text-decoration: none;
+}
 
+a:visited {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: none;
+}
