--- a/stylepictures.css
+++ b/stylepictures.css
@@ -56,9 +56,14 @@ ul li.active a{
     margin: auto;
 }
 .collage{
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border: 5px solid #fff;
+    float: left;
+    width:33.33%;
+    padding : 5px;
+    
+}
+
+.row : after{
+    content:"";
+    display:table;
+    clear:both;
 }
