--- a/stylepictures.css
+++ b/stylepictures.css
@@ -12,7 +12,7 @@
     height:auto;
 }
 
-header
+body
 {
     background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/pic.jpg);
     height:100vh;
