--- a/stylepictures.css
+++ b/stylepictures.css
@@ -14,7 +14,7 @@
 
 body
 {
-    background-color: #1a75ff;
+    background-color: #003d99;
     height:100vh;
     background-size:cover;
     background-position: center;
